# calibtool

./: .gitignore  CMakeLists.txt  MonoConfig.py  README.md  StereoConfig.py  Thirdbuild.sh  boardgen.py  build.sh  conventer.py  example_calib.cc  example_cbdetect.cc  main.py  monocalib-fisheye.py  monocalib.cc  reconstruction.py  rectify.py  requirements.txt  stereo_ship.yaml  stereocalib-omnidir.py  stereocalib.cc  stereocalib.py  test.py
Example/: monocalib  stereocalib
Example_old/: example_calib.cc  example_rectify  example_rectify.cc
boarddettools/discocal/: CMakeLists.txt  README.md  demomono.sh  demostereo.sh  monodet.cc  stereodet.cc  worldboardgen.cc
boarddettools/discocal/include/: CTargetDetector.h  utils.h
boarddettools/discocal/src/: CCircleGridFinder.cpp  CTargetDetector.cpp
boarddettools/matlabtool/: Main_MonoCalib.m  Main_StereoCalib.m  detectCircleGridPointsSymmetric.m  drawCornerInOrder.m
calibC++/: CMakeLists.txt  README.md
calibC++/Example/: monocalib.cc  rectify  rectify.cc  stereocalib.cc
calibC++/Example_old/: example_calib
calibC++/src/: calib.cc  calib.h
calibpython/: monocalib-omnidir.py  monocalib.py  rgbd_stereo.py  stereocalib-fisheye.py
config/: 1280.yaml  1920.yaml  1920new.yaml  config.yaml  mono_circle.yaml  mono_corner.yaml  stereo_circle.yaml
config/Fisheye/: mono_circle.yaml  mono_corner.yaml  stereo_circle.yaml  stereo_corner.yaml
config/Omnidir/: mono_circle.yaml  mono_corner.yaml  stereo_circle.yaml  stereo_corner.yaml
config/Pinhole/: stereo_corner.yaml
document/: 单目原理.md  双目三维重建原理.md
include/calib/: CameraCalibration.h  StereoCameraCalibration.h
include/camera_models/: CostFunctionFactory.h
include/chessboard/: Chessboard.h  CircleGridFinder.hpp  Spline.h  TargetDetector.hpp
include/gpl/: gpl.h
matlabtool/: matlabtool_readme.md
monocircle/: param.yaml  pose.txt  world_coordinates.csv
monocircle/corners/: 1.csv  5.csv  8.csv
monocorner/: param.yaml  pose.txt
monocorner/corners/: 6.csv
src/: Camera.py  CameraConfig.cc  CameraConfig.h  Monocalib.py  Reconstruct.py  StereoCalib.py  __init__.py  calib.cc  calib.h  config.h  utiles.py
src/calib/: CameraCalibration.cc  StereoCameraCalibration.cc  Transform.cc
src/camera_models/: CameraFactory.cc  CataCamera.cc  CataCamera_test.cc  CostFunctionFactory.cc  EquidistantCamera.cc  EquidistantCamera_test.cc  PinholeCamera.cc  PinholeCamera_test.cc  ScaramuzzaCamera.cc
src/chessboard/: Chessboard.cc  CircleGridFinder.cc  TargetDetector.cc
src/gpl/: EigenQuaternionParameterization.cc
stereocircle/: left_pose.txt  param.yaml  right_pose.txt
stereocircle/left_corners/: 10.csv  2.csv  3.csv  4.csv  6.csv  7.csv  9.csv
stereocircle/right_corners/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
stereocorner/: left_pose.txt  param.yaml  right_pose.txt  world_coordinates.csv
stereocorner/left_corners/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
stereocorner/right_corners/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
